Add point-in-time data entitlement ledger
